Externe libraries - Added ref to websocket protocol

--- a/references.bib
+++ b/references.bib
@@ -158,6 +158,17 @@
 	howpublished = {\url{http://hackage.haskell.org/package/aeson-0.7.0.0/docs/Data-Aeson-TH.html}}
 }
 
+@misc{WebSocket2011,
+	author = {I. Fette and and {Google, Inc.} and A. Melnikov and {Isode Ltd.}},
+	title = {The WebSocket Protocol},
+	month = {december},
+	year = {2011},
+	howpublished = {\url{http://tools.ietf.org/html/rfc6455}},
+	urldate = {20 Jan 2014},
+	shorthand = {RFC6455},
+	note = {RFC6455}
+}
+
 @inproceedings{comet2007,
   title={A comparison of push and pull techniques for ajax},
   author={Bozdag, Engin and Mesbah, Ali and Van Deursen, Arie},
