Output in module gefixt, is nou naar de waarheid

--- a/Hoofdstukken/ontwerp/detail/module.tex
+++ b/Hoofdstukken/ontwerp/detail/module.tex
@@ -29,7 +29,7 @@ De server draait in het proces dat gestart wordt vanuit de Haskell-code van de p
 \paragraph{Input/output}
 De module handelt input en output af door events naar de eventHandler van de programmeur te sturen. Bijvoorbeeld: wanneer een gebruiker op een rondje klikt zal het programma de eventHandler aanroepen met de ID van dat rondje en de locatie van de muisklik. De eventHandler van de programmeur kan dan nieuwe output genereren op basis van dit event. Zoals een nieuw menu weergeven of het uitvoeren van een actie zoals het opvragen van een bestand van de gebruiker. In \autoref{fig:startup_procedure} is deze interactie weergegeven.
 
-De programmeur zal in zijn eventHandler bij ieder event de huidige state en de huidige event meekrijgen. Het type van de eventhandler is \inlinecode{userState -> Event -> (userState, Output)}, waarin de programmeur elk type aan userState kan geven. Door middel van pattern matching kan de programmeur makkelijk een bepaald event opvangen. Bijvoorbeeld: een muisklikevent wordt opgevangen door: \inlinecode{handler state (MouseClick (x,y) "id")}. De returnwaarde van de eventhandler is een tuple van de nieuwe state en de output. Output is een tuple van \inlinecode{(Maybe Shape, [Action])}. De eventhandler kan meerdere acties tegelijk uitvoeren en/of een grafische output leveren. De ondersteunde events en outputtypes worden verder toegelicht in \autoref{subsec:grafische_bibliotheek}.
+De programmeur zal in zijn eventHandler bij ieder event de huidige state en de huidige event meekrijgen. Het type van de eventhandler is \inlinecode{userState -> Event -> (userState, Output)}, waarin de programmeur elk type aan userState kan geven. Door middel van pattern matching kan de programmeur makkelijk een bepaald event opvangen. Bijvoorbeeld: een muisklikevent wordt opgevangen door: \inlinecode{handler state (MouseClick (x,y) "id")}. De returnwaarde van de eventhandler is een tuple van de nieuwe state en de output. Output is of \inlinecode{BlockingAction action} of een \inlinecode{Out (Maybe Shape, [Action])}, zo kan de gebruiker of een enkele blocking actie doen, of een shapen en een lijst van acties teruggeven. Voor een volledige lijst van (blocking-)acties kan \autoref{subsec:grafische_bibliotheek} bekeken worden.
 
 \paragraph{Timers}
 Canvas.hs ondersteunt timers die met een bepaald interval events naar de eventHandler sturen. Op deze manier is het mogelijk om bijvoorbeeld animaties of andere periodieke updates uit te voeren. Er is voor gekozen om de timers te laten draaien in de module, en niet in de JavaScript applicatie. Dit had voornamelijk als reden dat de JavaScript applicatie ontworpen is voor interactie met de cliënt en het laten lopen van timers daar niet onder valt. Daarnaast heeft het als bijkomend voordeel dat de timer events niet via de WebSocket verstuurd hoeven te worden.
