--- a/Hoofdstukken/ontwerp/detail/module.tex
+++ b/Hoofdstukken/ontwerp/detail/module.tex
@@ -10,7 +10,7 @@ De module is de Haskell bibliotheek die de programmeur gebruikt om de grafische 
 \end{figure}
 
 \paragraph{Servers}
-Canvas.hs draait een simpele server op port 8000 die statische bestanden kan serveren. Waaronder de index pagina, de javascript bestanden en eventueel plaatjes. Op port 8080 draait een WebSocket server die de verbinding met de client onderhoudt.
+Canvas.hs draait een simpele server op port 8000 die statische bestanden kan serveren. Waaronder de index pagina, de JavaScript bestanden en eventueel plaatjes. Op port 8080 draait een WebSocket server die de verbinding met de client onderhoudt.
 
 
 \paragraph{Server in de module}
