In het canvas -> Op het canvas

--- a/Hoofdstukken/ontwerp/detail/client.tex
+++ b/Hoofdstukken/ontwerp/detail/client.tex
@@ -16,7 +16,7 @@ Die client is het deel van Canvas.hs dat in de browser van de gebruiker draait. 
 Vanuit de module ontvangt de JavaScript-applicatie via de WebSocketverbinding Output. Deze output wordt opgedeeld in acties en een te tekenen grafische boom. Deze boom wordt omgezet in de structuur van KineticJS. Voor de shapes uit de boom waarvan aangegeven is dat ze ge\"interesseerd zijn in events worden eventlisteners toegevoegd. Wanneer de volledige structuur opgebouwd is wordt de oude structuur weggegooid en de nieuwe structuur op het canvas getekend. Een uitgebreid overzicht van alle shapes, acties en events kan gevonden worden in \autoref{sec:gebruikershandleiding}: de gebruikershandleiding.
 
 \paragraph{Mousedrag}
-Standaard ondersteunt KineticJS mousedrag events, maar door de manier waarop Canvas.hs iedere keer opnieuw de output genereert raken de events van KineticJS verloren. Daarom maakt Canvas.hs gebruik van een eigen implementatie van mousedrag in de Canvas. Een mousedrag begint met een MouseDownEvent. Vanaf dat moment houdt de JavaScript-applicatie een ID bij van het huidige element. Alle opvolgende MouseMoveEvents zijn drag events die naar de client worden verstuurd. Deze MouseMoveEvents worden doorgegeven naar de Canvas.hs module met de vorige coördinaten van de muis en de huidige coördinaten van de muis.
+Standaard ondersteunt KineticJS mousedrag events, maar door de manier waarop Canvas.hs iedere keer opnieuw de output genereert raken de events van KineticJS verloren. Daarom maakt Canvas.hs gebruik van een eigen implementatie van mousedrag op het Canvas. Een mousedrag begint met een MouseDownEvent. Vanaf dat moment houdt de JavaScript-applicatie een ID bij van het huidige element. Alle opvolgende MouseMoveEvents zijn drag events die naar de client worden verstuurd. Deze MouseMoveEvents worden doorgegeven naar de Canvas.hs module met de vorige coördinaten van de muis en de huidige coördinaten van de muis.
 Op deze manier kan de module bepalen wat er moet gebeuren tijdens het draggen. Op het moment dat het programma aangeeft niet meer ge\"interesseerd te zijn in drag events op dat ID of in het geval van een MouseUpEvent stopt de drag in de client.
 
 \subsubsection{Acties}
