problemen: unsafepreformIO toegevoegd

--- a/Hoofdstukken/evaluatie/problemen.tex
+++ b/Hoofdstukken/evaluatie/problemen.tex
@@ -40,5 +40,8 @@ data SecondRecord = Snd { key :: String }
 De meestgebruikte JSON libraries vertalen records naar JSON. Hierbij nemen ze de sleutel uit het record als sleutelnaam voor de vertaalde JSON. Door bovenstaand omschreven probleem levert dit problemen op als JSON datastructuren sleutelnamen delen. Hierdoor moest handmatig toJSON instanties voor deze datastructuren geschreven worden, wat veel regels triviale code oplevert. Daarnaast wordt in de door Canvas.hs gebruikte datastructuur gebruik gemaakt van het \inlinecode{Maybe}-datatype om aan te geven of een veld van een record al dan niet gevuld is. Aeson, de in Canvas.hs gebruikte JSON-library, encodeert deze lege velden (\inlinecode{field = Nothing}) standaard als \inlinecode{null}. Het protocol vereist echter dat lege velden niet worden meegestuurd. Uiteindelijk zijn deze twee problemen overkomen door het gebruik van TemplateHaskell \cite{AesonTH}. Hiermee is het mogelijk om de \inlinecode{Nothing}-velden niet te encoderen. Daarnaast is het mogelijk om een een vast aantal karakters van de sleutels niet te encoderen, hierdoor wordt het hierboven omschreven probleem opgelost. 
 
 
-\paragraph{Threads}
+\subsubsection{Threads}
 Bij het gebruik van Canvas.hs lopen verschillende threads om verschillende delen van het programma af te handelen. In het main thread van het haskellprogramma wordt canvas.hs aangeropen, er wordt dan vervolgens een apart thread gestart voor de HTTP-server en in het mainthread wordt de WebSocketsserver gestart. Deze WebSocketsserver zal vervolgens ook de eventHandler van de gebruiker aanroepen. Daarnaast lopen door de student gestarte \inlinecode{Timer}s ook elk in een eigen thread. Bij de originele implementatie van deze threads werden al deze extra threads niet netjes gestops als het main thread werd gestopt. Door met behulp van MVars te communiceren tussen de main thread en de extra threads worden ook deze extra threads inmiddels netjes gestopt.
+
+\subsubsection{Unsafe I/O}
+In de HTTP- en WebSocketsserver wordt gebruik gemaakt van \inlinecode{unsafePreformIO} voor het bijhouden van een lijst van child processen (een MVar die threads bijhoudt) en voor het bijhouden van de verbinding met client (een IORef die de connection naar de client bevat). Hoewel het gebruik van \inlinecode{unsafePreformIO} in dit geval volkomen veilig is, zijn er bezwaren tegen het gebruik van ervan\cite{Haskell.org2008}. Dit is namelijk niet de netste oplossing en kan meestal voorkomen worden. Het is netter om m.b.v. bijvoorbeeld de StateT-monad de server deze zaken bij te laten houden. Echter is het implementeren daarvan tijdsintensief en is daarom voor deze oplossing gekozen.
