--- a/Hoofdstukken/evaluatie/problemen.tex
+++ b/Hoofdstukken/evaluatie/problemen.tex
@@ -41,7 +41,7 @@ De meestgebruikte JSON libraries vertalen records naar JSON. Hierbij nemen ze de
 
 
 \subsubsection{Threads}
-Bij het gebruik van Canvas.hs lopen verschillende threads om verschillende delen van het programma af te handelen. In het main thread van het haskellprogramma wordt canvas.hs aangeropen, er wordt dan vervolgens een apart thread gestart voor de HTTP-server en in het mainthread wordt de WebSocketsserver gestart. Deze WebSocketsserver zal vervolgens ook de eventHandler van de gebruiker aanroepen. Daarnaast lopen door de student gestarte \inlinecode{Timer}s ook elk in een eigen thread. Bij de originele implementatie van deze threads werden al deze extra threads niet netjes gestops als het main thread werd gestopt. Door met behulp van MVars te communiceren tussen de main thread en de extra threads worden ook deze extra threads inmiddels netjes gestopt.
+Bij het gebruik van Canvas.hs lopen verschillende threads om verschillende delen van het programma af te handelen. In het main thread van het haskellprogramma wordt Canvas.hs aangeropen, er wordt dan vervolgens een apart thread gestart voor de HTTP-server en in het mainthread wordt de WebSocketsserver gestart. Deze WebSocketsserver zal vervolgens ook de eventHandler van de gebruiker aanroepen. Daarnaast lopen door de student gestarte \inlinecode{Timer}s ook elk in een eigen thread. Bij de originele implementatie van deze threads werden al deze extra threads niet netjes gestops als het main thread werd gestopt. Door met behulp van MVars te communiceren tussen de main thread en de extra threads worden ook deze extra threads inmiddels netjes gestopt.
 
 \subsubsection{Unsafe I/O}
 In de HTTP- en WebSocketsserver wordt gebruik gemaakt van \inlinecode{unsafePreformIO} voor het bijhouden van een lijst van child processen (een MVar die threads bijhoudt) en voor het bijhouden van de verbinding met client (een IORef die de connection naar de client bevat). Hoewel het gebruik van \inlinecode{unsafePreformIO} in dit geval volkomen veilig is, zijn er bezwaren tegen het gebruik van ervan\cite{Haskell.org2008}. Dit is namelijk niet de netste oplossing en kan meestal voorkomen worden. Het is netter om m.b.v. bijvoorbeeld de StateT-monad de server deze zaken bij te laten houden. Echter is het implementeren daarvan tijdsintensief en is daarom voor deze oplossing gekozen.
